[package]
name = "mockserver"
version = "0.1.0"
authors = ["shamazo <hmnicholson12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "*"
libmessages = {path = "../libmessages"}
simplelog = "^0.7.6"
log = "0.4"