[package]
name = "mockserver"
version = "0.1.0"
authors = ["shamazo <hmnicholson12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "^0.7.6"
log = "0.4"
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.3"