[package]
name = "server"
version = "0.1.0"
authors = ["hamish <hmnicholson12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
simplelog = "^0.7.6"
log = "0.4"
tonic = "0.3"
prost = "0.6"
tokio = { version = "1.0.1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
rayon = "*"
config = "0.10"

